# macrospace-autotransform

./: Cargo.toml
core/: Cargo.toml
core/src/: autotransform.rs  autotransform_bank.rs  autotransform_bindings.rs  autotransform_group.rs  expr_bindings.rs  expr_pattern.rs  lib.rs  specialization_bindings.rs  transform_binding.rs  type_pattern.rs  type_pattern_bindings.rs
core/src/bindings/: autotransform_bindings.rs  expr_bindings.rs  mod.rs  specialization_bindings.rs  validation_tokens.rs
core/src/translation/: associated_translator.rs  combined_translator.rs  get_translation.rs  mod.rs  receiver_translator.rs  ref_status.rs  util.rs
core/tests/: substitution.rs  tuple.rs
macros/: Cargo.toml
macros/src/: define_autotransform.rs  group_autotransforms.rs  lib.rs
macros/src/delegate/: autotransform_impl_block.rs  autotransform_impl_item.rs  autotransform_path.rs  delegate.rs  impl_fn.rs  impl_trait.rs  mod.rs  type_transformer.rs
src/: autotransform.rs  autotransform_bank.rs  autotransform_bindings.rs  closure_bindings.rs  common_transforms.rs  lib.rs
