[package]
name = "macrospace-autotransform"
version = "0.1.0"
edition = "2024"

[dependencies]
macrospace-autotransform-core = {path = "core"}
macrospace-autotransform-macros = {path = "macros"}

#macrospace = {path = "../macrospace"}

#proc-macro2 = {version = "1.0"}
#syn = {version = "2.0"}
#quote = {version = "1.0"}
#syn_derive = {version = "0.2"}
