[package]
name = "macrospace-autotransform-macros"
version = "0.1.0"
edition = "2024"

[dependencies]
macrospace = {path = "../../macrospace"}
macrospace-autotransform-core = {path = "../core"}

syn = {version = "2.0"}
proc-macro2 = {version = "1.0"}
quote = {version = "1.0"}
syn_derive = {version = "0.2"}

[lib]
proc-macro = true
